--- a/prototype/css/discounts.css
+++ b/prototype/css/discounts.css
@@ -135,10 +135,9 @@ h2 {
 .search-box {
   position: relative;
   width: 100%;
-  max-width: 360px;
   height: 60px;
   border-radius: 120px;
-  margin: 0 auto;
+  /* margin: 0 auto; */
 }
 .search-icon,
 .go-icon {
@@ -279,4 +278,33 @@ h2 {
 #search::selection {
   color: #34b6a6;
   background: rgba(0, 0, 0, 0.25);
+}
+
+.filter-box .btn {
+  background-color: transparent;
+  /* border-color: #34b6a6;
+  border-radius: 120px;
+  border-width: medium; */
+  width: 100%;
+  height: 60px;
+}
+
+.fa-funnel-dollar {
+  text-align: end;
+  font-size: 1.5em;
+  color: #34b6a6;
+}
+
+.fa-sort-amount-up-alt {
+  text-align: end;
+  font-size: 1.5em;
+  color: #34b6a6;
+}
+
+.fa-user-circle {
+  font-size: 2.5em;
+  background: transparent;
+  border: none;
+  padding-top: 5px;
+  color: #ffffff;
 }
