--- a/prototype/css/discounts.css
+++ b/prototype/css/discounts.css
@@ -56,6 +56,13 @@ html * {
   color: #39ac9b;
 }
 
+#settings a:active {
+  background-color: #39ac9b !important;
+  filter: brightness(85%);
+  border-color: #39ac9b !important;
+  color: white;
+}
+
 @media (min-width: 992px) {
   #mainNav {
     -webkit-transition: padding-top 0.3s, padding-bottom 0.3s;
@@ -312,6 +319,17 @@ div.search-box::before {
   background-color: transparent;
   width: 100%;
   height: 60px;
+}
+
+/* .filtersort-box button:active {
+  color: #39ac9b;
+} */
+
+.filtersort-box .dropdown-item:active {
+  background-color: #39ac9b !important;
+  filter: brightness(85%);
+  border-color: #39ac9b !important;
+  color: white;
 }
 
 .bootstrap-select .dropdown-toggle:focus {
