Updated button colors on hover

--- a/prototype/css/index.css
+++ b/prototype/css/index.css
@@ -67,6 +67,31 @@ a:hover {
   box-shadow: 0 0 0 0.2rem rgba(138, 195, 82, 0.5) !important;
 }
 
+
+.btn-outline-primary {
+  background-color: #39ac9b;
+  border-color: #39ac9b; 
+}
+
+.btn-outline-primary a{
+  color: white;
+}
+
+.btn-outline-primary:active,
+.btn-outline-primary:focus,
+.btn-outline-primary:hover {
+  background-color: #39ac9b !important;
+  filter: brightness(85%);
+  border-color: #39ac9b !important;
+  color: white;
+}
+
+.btn-outline-primary:active,
+.btn-outline-primary:focus {
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(138, 195, 82, 0.5) !important;
+  box-shadow: 0 0 0 0.2rem rgba(138, 195, 82, 0.5) !important;
+}
+
 #mainNav {
   background-color: #293039;
 }
@@ -308,7 +333,7 @@ ul.social-buttons li a:hover {
 }
 
 #login .btn-outline-primary {
-  color: #39ac9b;
+  color: white;
   border-color: #39ac9b;
 }
 
