converted footer and navbar to materialize

--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,4 +1,4 @@
-footer {
+.page-footer {
   background: #414042;
   padding: 4rem 0 0;
   color: #fff;
@@ -54,10 +54,11 @@ footer .social a:hover {
   color: #39ac9b;
 }
 
-footer .copyright {
+.footer-copyright {
+  text-align: center;
   margin-top: 3rem;
   font-size: 13px;
-  background: #4e4e4e;
+  background: #4e4e4e !important;
   padding: 1rem;
   color: #ccc;
 }
