--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -1,11 +1,55 @@
-#mainNav {
+.main-nav {
   background-color: #293039;
 }
 
-/* #mainNav img {
-    height: 25%;
-    width: 25%;
-  } */
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+  .brand-logo img {
+    max-height: 90px;
+    margin-top: 5px;
+  }
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+  .brand-logo img {
+    max-height: 90px;
+    margin-top: 5px;
+  }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+  .main-nav {
+    min-height: 100px;
+    line-height: 100px;
+  }
+  .nav-wrapper {
+    width: 50%;
+    margin: 0 auto;
+  }
+
+  .nav-wrapper ul {
+    margin-left: 100px;
+  }
+
+  .brand-logo img {
+    max-height: 90px;
+    margin-top: 5px;
+  }
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+}
+
+/* #mainNav {
+  background-color: #293039;
+}
 
 #mainNav .navbar-toggler {
   font-size: 12px;
@@ -74,4 +118,4 @@
     font-size: 1.25em;
     padding: 12px 0;
   }
-}
+} */
