--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -2,49 +2,92 @@
   background-color: #293039;
 }
 
+.main-nav ul {
+  width: 100%;
+}
+
+.main-nav,
+.navbar-fixed {
+  min-height: 100px;
+  line-height: 100px;
+}
+
+.brand-logo img {
+  max-height: 90px;
+  margin-top: 5px;
+}
+
+/* #header img {
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  min-width: 50%;
+  min-height: 50%;
+} */
+
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
-  .brand-logo img {
-    max-height: 90px;
-    margin-top: 5px;
+  .brand-logo {
+    left: 10% !important;
   }
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
-  .brand-logo img {
-    max-height: 90px;
-    margin-top: 5px;
+  .brand-logo {
+    left: 10% !important;
   }
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
+  .brand-logo {
+    left: 10% !important;
+  }
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
-  .main-nav {
-    min-height: 100px;
-    line-height: 100px;
+  .nav-wrapper {
+    width: 75%;
+    margin: 0 auto;
   }
+
+  .nav-wrapper ul {
+    padding-left: 100px;
+  }
+
+  .brand-logo {
+    left: 0 !important;
+  }
+
+  /* .main-nav ul li:nth-child(4),
+  li:nth-child(5) {
+    float: right;
+  } */
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
   .nav-wrapper {
     width: 50%;
     margin: 0 auto;
   }
 
   .nav-wrapper ul {
-    margin-left: 100px;
+    padding-left: 100px;
   }
 
-  .brand-logo img {
-    max-height: 90px;
-    margin-top: 5px;
+  .brand-logo {
+    left: 0 !important;
   }
-}
 
-/* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {
+  /* .main-nav ul li:nth-child(4),
+  li:nth-child(5) {
+    float: right;
+  } */
 }
 
 /* #mainNav {
