--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -17,6 +17,18 @@
   margin-top: 5px;
 }
 
+#cardUser {
+  background-image: url("../img/logo.png");
+  background-repeat: no-repeat;
+  height: 30vh;
+}
+
+#cardVendor {
+  background-image: url("../img/logo.png");
+  background-repeat: no-repeat;
+  height: 30vh;
+}
+
 /* #header img {
   top: 0;
   left: 0;
